--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ a {
     flex-direction: column;
     width: 65vw;
     height: 100vh;
-    background-color: rgb(0,0,0);
+    background-color: black;
 }
 
 header {
@@ -96,9 +96,12 @@ input {
     margin-left: 4vw;
     margin-bottom: 3vh;
     margin-top: 1vh;
+    height: 1.4rem;
+    border-radius: 5px;
+    line-height: 1.2rem;
 }
 
-input:invalid {
+input:not(:placeholder-shown):invalid {
     border: red 2px solid;
 }
 
@@ -114,3 +117,24 @@ input:invalid {
     padding-top: 2.5vh;
     
 }
+
+.form-progress-bar {
+    display: flex;
+    align-items: center;
+}
+
+.progress-circle::after {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(black 50%, transparent 40%),
+    conic-gradient(#00FF41 0deg 360deg);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    content: "0%";
+    color: white;
+}
+
