--- a/style.css
+++ b/style.css
@@ -138,3 +138,92 @@ input:not(:placeholder-shown):invalid {
     color: white;
 }
 
+.progress-one::after {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(black 50%, transparent 40%),
+    conic-gradient(#008F11 0deg 61.2deg, #00FF41 61.2deg 360deg);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    content: "17%";
+    color: white;
+}
+
+.progress-two::after {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(black 50%, transparent 40%),
+    conic-gradient(#008F11 0deg 118.8deg, #00FF41 118.8deg 360deg );
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    content: "33%";
+    color: white;
+}
+
+.progress-three::after {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(black 50%, transparent 40%),
+    conic-gradient(#008F11 118.8deg 180deg, #00FF41 180deg 360deg);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    content: "50%";
+    color: white;
+}
+
+.progress-four::after {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(black 50%, transparent 40%),
+    conic-gradient(#008F11 180deg 241.2deg, #00FF41 241.2deg 360deg);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    content: "67%";
+    color: white;
+}
+
+.progress-five::after {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(black 50%, transparent 40%),
+    conic-gradient(#008F11 241.2deg 298.8deg, #00FF41 298.8deg 360deg);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    content: "83%";
+    color: white;
+}
+
+.progress-six::after {
+    margin-top: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: radial-gradient(black 50%, transparent 40%),
+    conic-gradient(#008F11 298.8deg 360deg);
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    content: "100%";
+    color: white;
+}
