--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 #pic-container {
     display: flex;
     flex-direction: column;
-    width: 40vw;
+    width: 45vw;
     height: 100vh;
     background-image: url('pictures/matrix.webp');
     background-size: 100% 100%;
@@ -53,11 +53,10 @@ a {
 
 #sign-up-container {
     display: flex;
-    flex-shrink: 1;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
     background-color: black;
+    
 }
 
 header {
@@ -77,9 +76,8 @@ fieldset {
     display: flex;
     border: #00FF41;
     border-style: double;
-    column-gap: 8vw;
+    column-gap: 6vw;
     margin-top: 6.6vh;
-    
 }
 
 legend {
@@ -113,6 +111,7 @@ input:not(:placeholder-shown):invalid {
     display: flex;
     flex-direction: column;
     padding-top: 2.5vh;
+    
 }
 
 .form-column-2 {
@@ -122,28 +121,22 @@ input:not(:placeholder-shown):invalid {
     
 }
 
-.form-progress-bar {
-    display: flex;
-    align-items: center;
-}
-
 .progress-circle::after {
-    margin-top: 5vh;
+    margin-top: 7vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: radial-gradient(black 50%, transparent 40%),
     conic-gradient(#00FF41 0deg 360deg);
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     content: "0%";
     color: white;
 }
 
 .progress-one::after {
-    margin-top: 5vh;
+    margin-top: 7vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -151,14 +144,14 @@ input:not(:placeholder-shown):invalid {
     background: radial-gradient(black 50%, transparent 40%),
     conic-gradient(#008F11 0deg 61.2deg, #00FF41 61.2deg 360deg);
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     content: "17%";
     color: white;
 }
 
 .progress-two::after {
-    margin-top: 5vh;
+    margin-top: 7vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -166,8 +159,8 @@ input:not(:placeholder-shown):invalid {
     background: radial-gradient(black 50%, transparent 40%),
     conic-gradient(#008F11 0deg 118.8deg, #00FF41 118.8deg 360deg );
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     content: "33%";
     color: white;
 }
@@ -181,14 +174,14 @@ input:not(:placeholder-shown):invalid {
     background: radial-gradient(black 50%, transparent 40%),
     conic-gradient(#008F11 118.8deg 180deg, #00FF41 180deg 360deg);
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     content: "50%";
     color: white;
 }
 
 .progress-four::after {
-    margin-top: 5vh;
+    margin-top: 7vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -196,14 +189,14 @@ input:not(:placeholder-shown):invalid {
     background: radial-gradient(black 50%, transparent 40%),
     conic-gradient(#008F11 180deg 241.2deg, #00FF41 241.2deg 360deg);
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     content: "67%";
     color: white;
 }
 
 .progress-five::after {
-    margin-top: 5vh;
+    margin-top: 7vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -211,14 +204,14 @@ input:not(:placeholder-shown):invalid {
     background: radial-gradient(black 50%, transparent 40%),
     conic-gradient(#008F11 241.2deg 298.8deg, #00FF41 298.8deg 360deg);
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     content: "83%";
     color: white;
 }
 
 .progress-six::after {
-    margin-top: 5vh;
+    margin-top: 7vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -226,8 +219,8 @@ input:not(:placeholder-shown):invalid {
     background: radial-gradient(black 50%, transparent 40%),
     conic-gradient(#008F11 298.8deg 360deg);
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     content: "100%";
     color: white;
 }
@@ -236,8 +229,47 @@ input:not(:placeholder-shown):invalid {
     overflow: auto;
 }
 
-@media screen and (max-width: 984px) {
-    #transparent-container {
-        font-size: 4vh;
+@media screen and (max-width: 1000px) {
+    fieldset {
+        column-gap: 5vw;
+    }
+}
+
+@media screen and (max-width: 938px) {
+    fieldset {
+        column-gap: 4vw;
+    }
+
+    .progress-circle::after, .progress-one::after,
+    .progress-two::after, .progress-three::after,
+    .progress-four::after, .progress-five::after,
+    .progress-six::after {
+        width: 100px;
+        height: 100px;
+    }
+}
+
+@media screen and (max-width: 876px) {
+    fieldset {
+        column-gap: 3vw;
+    }
+}
+
+@media screen and (max-width: 856px) {
+    fieldset {
+        column-gap: 2vw;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    fieldset {
+        column-gap: 1vw;
+    }
+    .progress-circle::after, .progress-one::after,
+    .progress-two::after, .progress-three::after,
+    .progress-four::after, .progress-five::after,
+    .progress-six::after {
+        width: 75px;
+        height: 75px;
     }
 }
