--- a/style.css
+++ b/style.css
@@ -19,30 +19,36 @@ body {
     flex-direction: column;
     width: 45vw;
     height: 100vh;
-    background-image: url('pictures/matrix.webp');
-    background-size: 100% 100%;
+    /*background-image: url('pictures/matrix.webp');
+    background-size: 100% 100%;*/
+}
+
+img {
+    height: 100vh;
 }
 
 #transparent-container {
+    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: Matrix;
+    width: 45vw;
     font-size: 5vh;
     color: white;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(255, 255, 255, 0.2);
     height: 16vh;
     margin-top: 24vh;
 }
 
 footer {
+    position: absolute;
     opacity: 0.7;
-    margin-top: auto;
     font-size: min(1vw, 2vw);
     font-family: Matrix;
     color: white;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 16vw;
+    margin-top: 96vh;
     padding-bottom: 0.5vh;
 }
 
@@ -275,13 +281,13 @@ button:hover {
     top: 3vh;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1427px) {
     fieldset {
         column-gap: 5vw;
     }
 }
 
-@media screen and (max-width: 938px) {
+@media screen and (max-width: 1350px) {
     fieldset {
         column-gap: 4vw;
     }
@@ -295,19 +301,19 @@ button:hover {
     }
 }
 
-@media screen and (max-width: 876px) {
+@media screen and (max-width: 1152px) {
     fieldset {
         column-gap: 3vw;
     }
 }
 
-@media screen and (max-width: 856px) {
+@media screen and (max-width: 1096px) {
     fieldset {
         column-gap: 2vw;
     }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1045px) {
     fieldset {
         column-gap: 1vw;
     }
@@ -317,5 +323,40 @@ button:hover {
     .progress-six::after {
         width: 75px;
         height: 75px;
+        margin-left: 2vw;
+    }
+}
+
+@media screen and (max-width: 987px) {
+    #pic-container {
+        width: 42vw;
+    }
+    #transparent-container {
+        width: 42vw;
+    }
+    footer {
+        margin-left: 15vw;
+    }
+}
+
+@media screen and (max-width: 922px) {
+    #pic-container {
+        width: 40vw;
+    }
+    #transparent-container {
+        width: 40vw;
+    }
+}
+
+@media screen and (max-width: 884px) {
+    #pic-container {
+        width: 38vw;
+    }
+    #transparent-container {
+        width: 38vw;
+        font-size: 4vh;
+    }
+    footer {
+        margin-left: 14vw;
     }
 }
