--- a/style.css
+++ b/style.css
@@ -8,8 +8,6 @@
     src: url('fonts/1942.ttf')
 }
 
-
-
 body {
     height: 100vh;
     display: flex;
@@ -17,25 +15,26 @@ body {
 }
 
 #pic-container {
+    background: url('gifs/Matrix.gif') ;
     display: flex;
     flex-direction: column;
-    width: 40vw;
+    width: 50vw;
     height: 100vh;
+
 }
 
 img {
     height: 100vh;
-
+    width: 100%;
 }
 
 #transparent-container {
-    position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
     font-family: Matrix;
-    width: 40vw;
-    font-size: 5vh;
+    width: 100%;
+    font-size: 4vw;
     color: white;
     background-color: rgba(70, 255, 86, 0.1);
     height: 16vh;
@@ -45,14 +44,12 @@ img {
 footer {
     display: flex;
     justify-content: center;
-    position: absolute;
     opacity: 0.7;
-    font-size: min(1vw, 2vw);
+    font-size: 1.5vw;
     font-family: Matrix;
     color: white;
-    margin-left: 13vw;
-    margin-top: 96vh;
     padding-bottom: 0.5vh;
+    margin-top: auto;
 }
 
 a {
@@ -68,9 +65,9 @@ a#login {
 #sign-up-container {
     display: flex;
     flex-direction: column;
+    width: 100%;
     height: 100vh;
     background-color: black;
-    
 }
 
 header {
@@ -82,9 +79,6 @@ header {
     font-weight: bold;
     color: white;
 }
-
-
-
 
 fieldset {
     display: flex;
@@ -298,39 +292,22 @@ span {
     font-family: Main;
 }
 
-@media screen and (max-width: 1427px) {
+
+@media screen and (max-width: 1096px) {
     fieldset {
         column-gap: 5vw;
     }
 }
 
-@media screen and (max-width: 1350px) {
+@media screen and (max-width: 1062px) {
     fieldset {
         column-gap: 4vw;
     }
 }
 
-@media screen and (max-width: 1152px) {
+@media screen and (max-width: 922px) {
     fieldset {
         column-gap: 3vw;
-    }
-}
-
-@media screen and (max-width: 1096px) {
-    fieldset {
-        column-gap: 2vw;
-    }
-    .progress-circle::after, .progress-one::after,
-    .progress-two::after, .progress-three::after,
-    .progress-four::after, .progress-five::after,
-    .progress-six::after {
-        margin-left: 1vw;
-    }
-}
-
-@media screen and (max-width: 1062px) {
-    fieldset {
-        column-gap: 1vw;
     }
     .progress-circle::after, .progress-one::after,
     .progress-two::after, .progress-three::after,
@@ -338,91 +315,27 @@ span {
     .progress-six::after {
         width: 100px;
         height: 100px;
-        margin-left: 4vw;
     }
 }
 
-@media screen and (max-width: 987px) {
-    
-    #transparent-container {
-        width: 40vw;
-    }
-    footer {
-        margin-left: 15vw;
-    }
-    .progress-circle::after, .progress-one::after,
-    .progress-two::after, .progress-three::after,
-    .progress-four::after, .progress-five::after,
-    .progress-six::after {
-        margin-left: 3vw;
+@media screen and (max-width: 815px) {
+    fieldset {
+        column-gap: 2vw;
     }
 }
 
-@media screen and (max-width: 956px) {
-    .progress-circle::after, .progress-one::after,
-    .progress-two::after, .progress-three::after,
-    .progress-four::after, .progress-five::after,
-    .progress-six::after {
-        margin-left: 1vw;
-    }
-}
-
-
-@media screen and (max-width: 922px) {
-    #pic-container {
-        width: 38vw;
-    }
-    #transparent-container {
-        width: 38vw;
-    }
-}
-
-@media screen and (max-width: 881px) {
-    #pic-container {
-        width: 36vw;
-    }
-    #transparent-container {
-        width: 36vw;
-        font-size: 4vh;
-    }
-    footer {
-        margin-left: 14vw;
-    }
-}
-
-@media screen and (max-width: 848px) {
-    #pic-container {
-        width: 35vw;
-    }
-    #transparent-container {
-        width: 35vw;
-    }
-    footer {
-        margin-left: 13vw;
-    }
-}
-
-@media screen and (max-width: 832px) {
+@media screen and (max-width: 786px) {
     .progress-circle::after, .progress-one::after,
     .progress-two::after, .progress-three::after,
     .progress-four::after, .progress-five::after,
     .progress-six::after {
         width: 75px;
         height: 75px;
-        
-    }
-    footer {
-        margin-left: 12vw;
     }
 }
 
-@media screen and (max-width: 832px) {
-    #pic-container {
-        width: 33vw;
-    }
+@media screen and (max-width: 717px) {
     #transparent-container {
-        width: 33vw;
-        
+        font-size: 3vw;
     }
-
 }
